--- a/build.html
+++ b/build.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 06 2020 10:44:05 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 07 2020 10:16:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5f1c74825997427a54233a" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -19,6 +19,9 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false});</script>
+  <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
@@ -72,8 +75,8 @@
   <div data-w-id="45a626de-ca0b-2563-74be-f2b582109958" class="feature-section hero">
     <div class="feature-bounding-box">
       <div class="feature-hero-text-parent">
-        <h1 class="build-horiz-text _1">&#x27;Normal&#x27; site builders are designed for <span class="emphasise title">e-commerce</span> as<span class="text-span-5"> </span><span class="emphasise title">that&#x27;s where they think the money is.</span></h1>
-        <div class="text-block-31"><strong class="bold-text-5">Jraft&#x27;s different.</strong> We don’t care about sales or promo codes. We don’t care about inventory or checkout. <span class="text-span-6">We care about stories.</span> And whether you’re The New York Times or a food blogger, Jraft lets you to tell your story the way it was meant to be told.</div>
+        <h1 class="build-horiz-text _1">&#x27;Normal&#x27; site builders are designed for <span class="emphasise title">e-commerce</span> as <span class="emphasise title">that&#x27;s where they think the money is.</span></h1>
+        <div class="text-block-31"><strong class="bold-text-5">Jraft&#x27;s different.</strong> We don’t care about sales or promo codes. We don’t care about inventory or checkout. <span class="text-span-6">We care about stories.</span> And whether you’re The New York Times or a food blogger, Jraft lets you tell your story the way it was meant to be told.</div>
         <div class="div-block-1372"><a href="#Footer-CTA" class="button square-blackbg w-button">Join Beta</a>
           <div class="launching-soon">Launching Soon</div>
         </div>
@@ -123,7 +126,7 @@
           <h2 class="heading-6">Performant Design, Easily Done.</h2>
           <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-1.png" loading="lazy" width="435" srcset="images/Mobile-Builder-Screen-1-p-500.png 500w, images/Mobile-Builder-Screen-1-p-800.png 800w, images/Mobile-Builder-Screen-1-p-1080.png 1080w, images/Mobile-Builder-Screen-1.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" alt="" class="header-mobile-photo">
             <h3 class="heading-7">It all starts with the block.</h3>
-            <div class="text-block-38">If you&#x27;ve ever built a content website, you&#x27;ll know how hard coding it is. Jraft gives you over 100+ customisable, professionally designed code blocks optimised for content discovery, ensuring readers never miss your stories.<br><span class="emphasise"></span></div>
+            <div class="text-block-38">If you&#x27;ve ever built a content website, you&#x27;ll know how difficult coding it is. Jraft gives you over 100+ customisable, professionally designed code blocks optimised for content discovery, ensuring readers never miss your stories.<br><span class="emphasise"></span></div>
           </div>
         </div>
         <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-2.png" loading="lazy" width="435" srcset="images/Mobile-Builder-Screen-2-p-500.png 500w, images/Mobile-Builder-Screen-2-p-800.png 800w, images/Mobile-Builder-Screen-2-p-1080.png 1080w, images/Mobile-Builder-Screen-2.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" alt="" class="header-mobile-photo">
@@ -295,7 +298,7 @@
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form">
+          <form id="email-form" name="email-form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post">
             <div class="div-block-6"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="First-Name" data-name="First Name" placeholder="First Name" id="First-Name" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="Last-Name" data-name="Last Name" placeholder="Last Name" id="Last-Name" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="email" data-name="Email" placeholder="Email" id="email" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
@@ -312,7 +315,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
