--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 06 2020 10:44:05 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 07 2020 10:16:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -14,6 +14,9 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false});</script>
+  <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
@@ -89,7 +92,7 @@
         <div data-w-id="092d83da-ade2-aca2-7647-7fc24e1f2e45" style="opacity:0" class="div-block-1432"><img src="images/Foyster-Media.svg" loading="lazy" alt="" class="image-59">
           <div class="text-block-54">&quot;Jraft is a game changer. Collaboration in Jraft knocks WordPress out of the park and lets us have a single source of truth.&quot;<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Robyn.png" loading="lazy" width="50" alt=""></div>
+            <div class="div-block-1440"><img src="images/Robyn.png" loading="lazy" width="48" height="48" alt=""></div>
             <div class="div-block-1441">
               <div class="text-block-56">Robyn Foyster</div>
               <div class="text-block-56">CEO, B&amp;T&#x27;s Most Powerful Women in Media</div>
@@ -125,7 +128,7 @@
         <div data-w-id="76ae0894-e981-518c-103b-b48f745db5a3" style="opacity:0" class="div-block-1432"><img src="images/The-Studio.svg" loading="lazy" alt="" class="image-59">
           <div class="text-block-54">“WordPress eat your heart out! Jraft integrates beautiful editorial &amp; turnkey distribution with workflow &amp; monetisation tools tailor-made for both publishers &amp; bloggers.”<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Bruce.jpg" loading="lazy" width="50" alt=""></div>
+            <div class="div-block-1440"><img src="images/Bruce.jpg" loading="lazy" width="48" height="48" alt=""></div>
             <div class="div-block-1441">
               <div class="text-block-56">Bruce Tulloch</div>
               <div class="text-block-56">Executive Director</div>
@@ -160,7 +163,7 @@
         <div data-w-id="349a5e96-11eb-05f8-88dc-51ee09185b5e" style="opacity:0" class="div-block-1432"><img src="images/NSW-Gov.svg" loading="lazy" alt="" class="image-59">
           <div class="text-block-54">&quot;Jraft essentially replaces our tech team and frees our content teams to focus on what they love.&quot;<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Victor.jpg" loading="lazy" width="50" alt=""></div>
+            <div class="div-block-1440"><img src="images/Victor.jpg" loading="lazy" width="48" height="48" alt=""></div>
             <div class="div-block-1441">
               <div class="text-block-56">Victor Cabello</div>
               <div class="text-block-56">Marketing Manager</div>
@@ -195,7 +198,7 @@
         <div data-w-id="efc0a1b9-9ce0-c088-9228-3f79444db841" style="opacity:0" class="div-block-1432"><img src="images/Crikey.svg" loading="lazy" alt="" class="image-59">
           <div class="text-block-54">&quot;The innovation brought by Jraft fosters the energy and spirit needed in the world of publishing.&quot;<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Peter-Fray.png" loading="lazy" width="50" srcset="images/Peter-Fray-p-500.png 500w, images/Peter-Fray.png 521w" sizes="48px" alt=""></div>
+            <div class="div-block-1440"><img src="images/Peter-Fray.png" loading="lazy" width="48" height="48" srcset="images/Peter-Fray-p-500.png 500w, images/Peter-Fray.png 521w" sizes="48px" alt=""></div>
             <div class="div-block-1441">
               <div class="text-block-56">Peter Fray</div>
               <div class="text-block-56">Editor in Chief</div>
@@ -253,7 +256,7 @@
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form">
+          <form id="email-form" name="email-form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post">
             <div class="div-block-6"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="First-Name" data-name="First Name" placeholder="First Name" id="First-Name" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="Last-Name" data-name="Last Name" placeholder="Last Name" id="Last-Name" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="email" data-name="Email" placeholder="Email" id="email" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
@@ -270,7 +273,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
