--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 07 2020 10:16:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 07 2020 10:54:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -11,12 +11,47 @@
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/jraft-landing.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+      ! function(o, c) {
+        var n = c.documentElement,
+          t = " w-mod-";
+        n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+      }(window, document);
+    </script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false});</script>
-  <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
+  <script type="text/javascript">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'UA-141202928-2', {
+        'anonymize_ip': false
+      });
+    </script>
+  <script type="text/javascript">
+      ! function(f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function() {
+          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = '2.0';
+        n.agent = 'plwebflow';
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s)
+      }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '669556453669016');
+      fbq('track', 'PageView');
+    </script>
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
@@ -48,19 +83,19 @@
     <div class="nav">
       <div class="blur w-embed">
         <style>
-	.background-blur{
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  }
-</style>
+            .background-blur {
+              -webkit-backdrop-filter: blur(20px);
+              backdrop-filter: blur(20px);
+            }
+          </style>
       </div>
       <div class="blur-nav w-embed">
         <style>
-	.navigation{
-  -webkit-backdrop-filter: blur(12px);
-  backdrop-filter: blur(12px);
-  }
-</style>
+            .navigation {
+              -webkit-backdrop-filter: blur(12px);
+              backdrop-filter: blur(12px);
+            }
+          </style>
       </div>
     </div>
   </div>
