--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 07 2020 10:54:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 07 2020 12:11:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -259,9 +259,9 @@
       <div class="form-block w-form">
         <form id="email-form-2" name="email-form-2" data-name="Email Form 2" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="form">
           <div class="div-block-1448">
-            <div class="compare-form-parent"><input type="text" class="text-field w-input" autofocus="true" maxlength="256" name="name-4" data-name="Name 4" placeholder="First name" id="name-4" required=""></div>
-            <div class="compare-form-parent"><input type="text" class="text-field w-input" autofocus="true" maxlength="256" name="name-3" data-name="Name 3" placeholder="Last name" id="name-3" required=""></div>
-            <div class="compare-form-parent"><input type="email" class="text-field w-input" autofocus="true" maxlength="256" name="name-2" data-name="Name 2" placeholder="Email Address" id="name-2" required=""></div>
+            <div class="compare-form-parent"><input type="text" class="text-field w-input" autofocus="true" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First name" id="FNAME" required=""></div>
+            <div class="compare-form-parent"><input type="text" class="text-field w-input" autofocus="true" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last name" id="LNAME" required=""></div>
+            <div class="compare-form-parent"><input type="email" class="text-field w-input" autofocus="true" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email Address" id="EMAIL-2" required=""></div>
           </div><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="submit-button w-button"></form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
@@ -306,7 +306,7 @@
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
           <form id="email-form" name="email-form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post">
-            <div class="div-block-6"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="First-Name" data-name="First Name" placeholder="First Name" id="First-Name" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="Last-Name" data-name="Last Name" placeholder="Last Name" id="Last-Name" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="email" data-name="Email" placeholder="Email" id="email" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
+            <div class="div-block-6"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
           </div>
