--- a/hosting.html
+++ b/hosting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 08 2020 07:49:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 00:15:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0308edc68c3868b89a7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -87,7 +87,7 @@
       <h2 class="feature-subheading">Experience world-class speed &amp; reliability</h2>
     </div>
     <div class="hosting-div-1">
-      <div class="div-block-32"><img src="images/Hosting-Demo.jpg" loading="lazy" width="609" srcset="images/Hosting-Demo-p-500.jpeg 500w, images/Hosting-Demo-p-1080.jpeg 1080w, images/Hosting-Demo.jpg 1218w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 52vw, 37vw" alt="A screenshot of Jraft&#x27;s collaborative editing software"></div>
+      <div class="div-block-32"><img src="images/Hosting-Demo.jpg" loading="lazy" width="609" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 52vw, 37vw" srcset="images/Hosting-Demo-p-500.jpeg 500w, images/Hosting-Demo-p-1080.jpeg 1080w, images/Hosting-Demo.jpg 1218w" alt="A screenshot of Jraft&#x27;s collaborative editing software"></div>
       <div class="div-block-125">
         <div class="text-block-10">Website speed test</div>
         <div class="text-block-11">Actual <a href="https://developers.google.com/speed/pagespeed/insights/" target="_blank" class="link">Google PageSpeed Insights</a> Test results for a Jraft publication</div>
@@ -164,7 +164,7 @@
     </div>
     <div class="feature-detail-div">
       <a href="create.html" class="div-block-134 w-inline-block">
-        <div class="photo-class"><img src="images/Hosting-Comp-1.jpg" loading="lazy" width="800" srcset="images/Hosting-Comp-1-p-500.jpeg 500w, images/Hosting-Comp-1-p-800.jpeg 800w, images/Hosting-Comp-1-p-1080.jpeg 1080w, images/Hosting-Comp-1.jpg 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" alt="A screenshot of Jraft&#x27;s collaborative editing software" class="image-21"></div>
+        <div class="photo-class"><img src="images/Hosting-Comp-1.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-1-p-500.jpeg 500w, images/Hosting-Comp-1-p-800.jpeg 800w, images/Hosting-Comp-1-p-1080.jpeg 1080w, images/Hosting-Comp-1.jpg 1600w" alt="A screenshot of Jraft&#x27;s collaborative editing software" class="image-21"></div>
         <div class="div-block-135">
           <h2 class="class-1">Writers &amp; Editors</h2>
           <div class="class-2">Publish and style beautiful articles that stand out in minutes from the Editor, without relying on developers.</div>
@@ -173,7 +173,7 @@
         </div>
       </a>
       <a href="build.html" class="div-block-134 w-inline-block">
-        <div class="photo-class"><img src="images/Hosting-Comp-2.jpg" loading="lazy" width="800" srcset="images/Hosting-Comp-2-p-500.jpeg 500w, images/Hosting-Comp-2-p-800.jpeg 800w, images/Hosting-Comp-2-p-1080.jpeg 1080w, images/Hosting-Comp-2.jpg 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" alt="A screenshot of Jraft&#x27;s website builder software" class="image-22"></div>
+        <div class="photo-class"><img src="images/Hosting-Comp-2.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-2-p-500.jpeg 500w, images/Hosting-Comp-2-p-800.jpeg 800w, images/Hosting-Comp-2-p-1080.jpeg 1080w, images/Hosting-Comp-2.jpg 1600w" alt="A screenshot of Jraft&#x27;s website builder software" class="image-22"></div>
         <div class="div-block-135">
           <h2 class="class-1">Publishers &amp; Designers</h2>
           <div class="class-2">Create your dream publication from scratch, and link your content categories to your front page without a line of code.</div>
@@ -245,45 +245,43 @@
       </a>
     </div>
   </div>
-  <div class="other-features">
-    <div class="feature-bounding-box other-features-1">
-      <h2 class="heading-10">All features</h2>
-      <div class="div-block-1397">
-        <a href="manage.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Workflow_1.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Workflow</h4>
-            <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
-          </div>
-        </a>
-        <a href="build.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Build</h4>
-            <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
-          </div>
-        </a>
-        <a href="create.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Edit.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Write</h4>
-            <div class="text-block-45">Write articles collaboratively and visually.</div>
-          </div>
-        </a>
-        <a href="engagement.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Engagement</h4>
-            <div class="text-block-45">Maximise your readership, monetise your audience.</div>
-          </div>
-        </a>
-      </div>
-      <div class="div-block-27 pricing">
-        <div class="div-block-1444">
-          <h3 class="text-block-8">Priced to scale with your publication</h3>
-          <div class="text-block-9">Start publishing for free, then get a plan to link a custom domain</div>
-        </div><a href="pricing.html" class="button square-blackbg w-button">View Pricing</a></div>
+  <div class="feature-bounding-box other-features-1">
+    <h2 class="heading-10">All features</h2>
+    <div class="div-block-1397">
+      <a href="manage.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Workflow_1.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Workflow</h4>
+          <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
+        </div>
+      </a>
+      <a href="build.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Build</h4>
+          <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
+        </div>
+      </a>
+      <a href="create.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Edit.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Write</h4>
+          <div class="text-block-45">Write articles collaboratively and visually.</div>
+        </div>
+      </a>
+      <a href="engagement.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Engagement</h4>
+          <div class="text-block-45">Maximise your readership, monetise your audience.</div>
+        </div>
+      </a>
     </div>
+    <div class="div-block-27 pricing">
+      <div class="div-block-1444">
+        <h3 class="text-block-8">Priced to scale with your publication</h3>
+        <div class="text-block-9">Start publishing for free, then get a plan to link a custom domain</div>
+      </div><a href="pricing.html" class="button square-blackbg w-button">View Pricing</a></div>
   </div>
   <div id="Footer-CTA" class="pre-footer">
     <div class="pre-footer-parent">
