--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 08 2020 07:49:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 00:15:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -79,7 +79,7 @@
           </div>
         </div>
       </div>
-      <div class="hero-photo-parent landing"><img src="images/Group-2.png" loading="eager" width="678" srcset="images/Group-2-p-500.png 500w, images/Group-2-p-800.png 800w, images/Group-2-p-1080.png 1080w, images/Group-2.png 1356w" sizes="(max-width: 767px) 99vw, (max-width: 991px) 70vw, 55vw" alt="" class="image-33"></div>
+      <div class="hero-photo-parent landing"><img src="images/Group-2.png" loading="eager" width="678" sizes="(max-width: 767px) 99vw, (max-width: 991px) 70vw, 55vw" srcset="images/Group-2-p-500.png 500w, images/Group-2-p-800.png 800w, images/Group-2-p-1080.png 1080w, images/Group-2.png 1356w" alt="" class="image-33"></div>
     </div>
   </div>
   <div data-w-id="8c4c8001-c179-953f-d933-c17efe467971" class="div-block-1429">
@@ -136,7 +136,7 @@
           </div>
         </div>
       </div>
-      <div class="div-block-1433"><img src="images/Mobile-Builder-Screen-2.png" loading="lazy" width="640" srcset="images/Mobile-Builder-Screen-2-p-500.png 500w, images/Mobile-Builder-Screen-2-p-800.png 800w, images/Mobile-Builder-Screen-2-p-1080.png 1080w, images/Mobile-Builder-Screen-2.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 48vw, 50vw" alt="">
+      <div class="div-block-1433"><img src="images/Mobile-Builder-Screen-2.png" loading="lazy" width="640" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 48vw, 50vw" srcset="images/Mobile-Builder-Screen-2-p-500.png 500w, images/Mobile-Builder-Screen-2-p-800.png 800w, images/Mobile-Builder-Screen-2-p-1080.png 1080w, images/Mobile-Builder-Screen-2.png 1280w" alt="">
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Designed for Publications</h3>
@@ -171,7 +171,7 @@
           </div>
         </div>
       </div>
-      <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 48vw, 50vw" alt="">
+      <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 48vw, 50vw" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" alt="">
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Collaborative Editing</h3>
