--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 08 2020 07:49:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 00:15:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -407,7 +407,7 @@
       <div class="button-parent"><a href="mailto:hello@tryjraft.com?subject=Jraft%20for%20Enterprise" class="button square-corners w-button">Contact Sales</a></div>
     </div>
   </div>
-  <div class="pricing-body-div">
+  <div class="pricing-more">
     <div>
       <h2 class="text-block-22">All plans include</h2>
       <div class="line-2"></div>
@@ -455,7 +455,7 @@
       </div>
     </div>
   </div>
-  <div class="pricing-body-div faq">
+  <div class="pricing-more">
     <div>
       <h2 class="faq">FAQ</h2>
       <div class="line-2"></div>
