--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 08 2020 07:49:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 00:15:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -66,7 +66,7 @@
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" alt="" class="image-58"></div>
+      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Jraft vs Wordpress</h1>
@@ -142,7 +142,7 @@
               <div class="wordpress-comparison-table">$60-$300</div>
             </div>
             <div class="cell-div comparison-tables">
-              <div class="wordpress-comparison-table">From $69/Y</div>
+              <div class="wordpress-comparison-table">Unlimited</div>
             </div>
           </div>
         </div>
@@ -425,7 +425,7 @@
       <p class="paragraph">On top of that, you’d often discover in the process that some key plugin of yours had gone zombie (that is, wasn’t being maintained anymore), leaving you with the always-enjoyable task of having to find a (hopefully free!) replacement.<br></p>
       <p class="paragraph">Great memories here.<br></p>
       <p class="paragraph">And don’t even get me started on child themes.<br></p>
-      <h3 class="blog-headings h3">The cost of (poor) WordPress performance</h3><img src="../images/WP-Google-Search.png" loading="lazy" srcset="../images/WP-Google-Search-p-500.png 500w, ../images/WP-Google-Search-p-800.png 800w, ../images/WP-Google-Search-p-1080.png 1080w, ../images/WP-Google-Search.png 1322w" sizes="(max-width: 767px) 100vw, 936px" alt="" class="image-57">
+      <h3 class="blog-headings h3">The cost of (poor) WordPress performance</h3><img src="../images/WP-Google-Search.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 87vw, 936px" srcset="../images/WP-Google-Search-p-500.png 500w, ../images/WP-Google-Search-p-800.png 800w, ../images/WP-Google-Search-p-1080.png 1080w, ../images/WP-Google-Search.png 1322w" alt="" class="image-57">
       <p class="paragraph">Yep, that&#x27;s a real screenshot of search suggestions on Google.<br></p>
       <p class="paragraph">In 2009, Google conducted a great experiment where they observed how likely a user was to leave a page, or &#x27;bounce&#x27;, if the site was slow. What they found was that <a href="https://www.marketingdive.com/news/google-53-of-mobile-users-abandon-sites-that-take-over-3-seconds-to-load/426070/" class="blog-link">53% of mobile users don&#x27;t read articles that take more than 3 seconds to load.</a> What&#x27;s more concerning, is the average WordPress publication takes a full 14 seconds to load.<br></p>
       <p class="paragraph">This doesn’t just damage people’s experience <em>on your site</em>. Google today includes page speed as a ranking factor in their algorithm, so if your site&#x27;s slow, you&#x27;re not only providing a bad experience for those who do find you — you’re lessening the chance they’ll find you in the first place.<br></p>
