--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 08 2020 07:49:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 00:15:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -81,7 +81,7 @@
           <div class="launching-soon">Launching Soon</div>
         </div>
       </div>
-      <div class="feature-hero-photo-parent manager"><img src="images/Manager-Comp.png" loading="eager" width="471.5" srcset="images/Manager-Comp-p-500.png 500w, images/Manager-Comp-p-800.png 800w, images/Manager-Comp.png 943w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 59vw, 46vw" alt="" class="image-53"></div>
+      <div class="feature-hero-photo-parent manager"><img src="images/Manager-Comp.png" loading="eager" width="471.5" sizes="(max-width: 767px) 100vw, (max-width: 991px) 59vw, 46vw" srcset="images/Manager-Comp-p-500.png 500w, images/Manager-Comp-p-800.png 800w, images/Manager-Comp.png 943w" alt="" class="image-53"></div>
     </div>
   </div>
   <div class="feature-section _5">
@@ -179,39 +179,37 @@
       </a>
     </div>
   </div>
-  <div class="other-features">
-    <div class="feature-bounding-box other-features-1">
-      <h2 class="heading-10">All features</h2>
-      <div class="div-block-1397">
-        <a href="build.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Build</h4>
-            <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
-          </div>
-        </a>
-        <a href="create.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Edit.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Write</h4>
-            <div class="text-block-45">Write articles collaboratively and visually.</div>
-          </div>
-        </a>
-        <a href="engagement.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Engagement</h4>
-            <div class="text-block-45">Maximise your readership, monetise your audience.</div>
-          </div>
-        </a>
-        <a href="hosting.html" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
-          <div class="div-block-1400">
-            <h4 class="heading-11">Hosting</h4>
-            <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
-          </div>
-        </a>
-      </div>
+  <div class="feature-bounding-box other-features-1">
+    <h2 class="heading-10">All features</h2>
+    <div class="div-block-1397">
+      <a href="build.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Build</h4>
+          <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
+        </div>
+      </a>
+      <a href="create.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Edit.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Write</h4>
+          <div class="text-block-45">Write articles collaboratively and visually.</div>
+        </div>
+      </a>
+      <a href="engagement.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Engagement</h4>
+          <div class="text-block-45">Maximise your readership, monetise your audience.</div>
+        </div>
+      </a>
+      <a href="hosting.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Hosting</h4>
+          <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
+        </div>
+      </a>
     </div>
   </div>
   <div id="Footer-CTA" class="pre-footer">
