--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 08 2020 07:49:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 00:15:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -66,7 +66,7 @@
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, 41vw" alt="" class="image-58"></div>
+      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, 41vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Jraft vs Wordpress</h1>
