--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 01:23:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 05:03:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -83,7 +83,7 @@
           <div class="launching-soon">Launching Soon</div>
         </div>
       </div>
-      <div class="feature-hero-photo-parent manager"><img src="images/Manager-Comp.png" loading="eager" width="471.5" sizes="(max-width: 767px) 100vw, (max-width: 991px) 59vw, 46vw" srcset="images/Manager-Comp-p-500.png 500w, images/Manager-Comp-p-800.png 800w, images/Manager-Comp.png 943w" alt="" class="image-53"></div>
+      <div class="feature-hero-photo-parent manager"><img src="images/Manager-Comp.png" loading="eager" width="471.5" sizes="(max-width: 479px) 93vw, (max-width: 767px) 92vw, (max-width: 991px) 59vw, 46vw" srcset="images/Manager-Comp-p-500.png 500w, images/Manager-Comp-p-800.png 800w, images/Manager-Comp.png 943w" alt="" class="image-53"></div>
     </div>
   </div>
   <div class="feature-section _5">
