--- a/vs/wix.html
+++ b/vs/wix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 01:23:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 05:03:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7ace6a19656db585edef80" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -68,7 +68,7 @@
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" alt="" class="image-58"></div>
+      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Jraft vs Wix</h1>
@@ -128,7 +128,7 @@
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/wix-logo.svg" loading="lazy" alt="The Wix Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">(╯°□°)╯︵ ┻━┻<br></div>
-            <div class="text-block-59">Wix code is notoriously terrible due to its unstructured site building process. Wix sites test among the lowest in terms of performance and code quality.</div>
+            <div class="text-block-59">Wix code is notoriously bad due to its unstructured site building process, testing amongst the lowest in terms of performance. This has a massive hit on your SEO.</div>
           </div>
         </div>
       </div>
