--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 09 2020 05:03:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 09 2020 09:27:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -549,11 +549,11 @@
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="#" class="footer-text">Builder</a></li>
-            <li><a href="#" class="footer-text">Editor</a></li>
-            <li><a href="#" class="footer-text">Workflow</a></li>
-            <li><a href="#" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="#" class="footer-text">Hosting &amp; Performance</a></li>
+            <li><a href="manage.html" class="footer-text">Workflow</a></li>
+            <li><a href="create.html" class="footer-text">Editor</a></li>
+            <li><a href="build.html" class="footer-text">Builder</a></li>
+            <li><a href="engagement.html" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="hosting.html" class="footer-text">Hosting &amp; Performance</a></li>
             <li><a href="pricing.html" aria-current="page" class="footer-text w--current">Pricing</a></li>
           </ul>
         </div>
@@ -569,10 +569,10 @@
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="#" class="footer-text">WordPress</a></li>
-            <li><a href="#" class="footer-text">Wix</a></li>
-            <li><a href="#" class="footer-text">Medium</a></li>
-            <li><a href="#" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li><a href="vs/wordpress.html" class="footer-text">WordPress</a></li>
+            <li><a href="vs/wix.html" class="footer-text">Wix</a></li>
+            <li><a href="vs/medium.html" class="footer-text">Medium</a></li>
+            <li><a href="vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a></li>
           </ul>
         </div>
       </div>
